commit 6  запускается задача.             -перевода этого потока в спящий режим на 5 секунд.       Состояние экрана во время загрузки должно переживать переворот экрана ( пересоздание активити).   Уже запущенный поток не запускаеться заново.   Т.к. события onCreateLoader после переворота экрана не происходит

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="fb.fandroid.adv.multithreadtask2_3.MainActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="50dp"
         android:visibility="gone" />
 
     <TextView
         android:id="@+id/loadTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+         />
 
     <Button
         android:id="@+id/startLoadingBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="start loading" />
 
 </LinearLayout>
